--- a/themal-web/assets/css/main.css
+++ b/themal-web/assets/css/main.css
@@ -1,10 +1,66 @@
  
+ html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
  
+
+.btn-inverse:active,
+.btn-inverse.active {
+  background-color: #080808 \9;
+}
+ 
+
+.btn-flat {
+    filter:progid:DXImageTransform.Microsoft.Gradient(enabled='false');
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    background-image:none;
+    border-bottom:5 solid #222;
+}
+
 iframe {
   /* optional */
   width: 100%;
   height: 100%; 
   min-height: 550px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+.modal-dialog {
+  width: 900px;
+}
+
+.modal-header { 
+background-color:#222; 
+padding:15px 25px;  font-size: 30px;
+color:#e8c152; 
+border-bottom:10px dashed #222;
+
+}
+
+.modal-content { 
+/* 80% of window height */
+color:#222; 
+min-height: 590; 
+background-color:#e8c152; 
+}       
+
+
+
+.modal-footer { 
+background-color:#222;  
+color: #e8c152; font-weight: bolder;
 }
 
 .countup {
